apps/production/evolvia-backend/components/evolvia-backend-core/ingress/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: evolvia-backend-core-vs
  namespace: evolvia-backend-prod
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "evolvia.api.cloud-mentor.hu"
spec:
  hosts:
  - "evolvia.api.cloud-mentor.hu"
  gateways:
  - evolvia-backend-core-gateway
  http:
  - route:
    - destination:
        host: evolvia-backend-core-app
        port:
          number: 8000
